# optiml

./: .gitignore  README.md  app.py  pyproject.toml  server.py
.github/: copilot-instructions.md
app/: main.py
app/core/: __init__.py  colors.py  database.py  reports.py  session.py  templates.py
app/views/: __init__.py  home.py  new_experiment.py  notebook.py  optimization.py  results.py
docs/: ADVANCED_FEATURES.md  FUTURE_VISION.md  IMPLEMENTATION_SUMMARY.md
examples/: basic_usage.py  batch_acquisition.py  hyperparameter_tuning.py  prior_knowledge.py
src/optiml/: __init__.py  acquisition.py  batch.py  constraints.py  convergence.py  designs.py  kernels.py  model_selection.py  multi_objective.py  optimizer.py  plotly_viz.py  priors.py  qbd.py  robust.py  sensitivity.py  space.py  statistics.py  surrogate.py  validation.py  visualization.py
static/: index.html
tests/: test_acquisition.py  test_batch.py  test_batch_acquisition.py  test_constraints.py  test_convergence.py  test_designs.py  test_kernels.py  test_model_selection.py  test_multi_objective.py  test_optimizer.py  test_plotly_viz.py  test_priors.py  test_qbd.py  test_robust.py  test_sensitivity.py  test_space.py  test_statistics.py  test_surrogate.py  test_validation.py
